--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Click-Helado</title><script defer="defer" src="/Landing/static/js/main.31d6cfe0.js"></script></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Click-Helado</title><script defer="defer" src="/Landing/static/js/main.36fd8cf0.js"></script></head><body><div id="root"></div></body></html>
